<resources>
    <string name="app_name">FrancosPerfumeMobile</string>
    <string name="title">OneFrancoScentHub</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="text_application_logo">Application Logo</string>
    <string name="text_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="dashboard_text">Dashboard</string>
    <string name="inventory_text">Inventory</string>
    <string name="request_text">Request</string>
    <string name="delivery_text">Delivery</string>
    <string name="dashboard_title_text">Dashboard Title</string>
    <string name="warning_text">Warning</string>
    <string name="sample_number">0000</string>
    <string name="hint_search_inventory">Search perfume name or id...</string>
    <string name="inventory_sample_name">Product Name</string>
    <string name="inventory_sample_unit_count">1 unit</string>
    <string name="inventory_sample_batch_count">5 batches</string>
    <string name="inventory_sample_product_id">PROD-000</string>
    <string name="inventory_sample_branch_location">Branch Location</string>
    <string name="inventory_sample_product_type">Premium</string>
    <string name="inventory_sample_gender_type">Unisex</string>
    <string name="pagination_sample_text">Showing 10 of 50</string>
    <string name="sample_request_id">REQ-###</string>
    <string name="sample_delivery_id">DEL-###</string>
    <string name="request_sample_status">Pending</string>
    <string name="request_sample_stage">Owner Review</string>
    <string name="request_sample_from_branch">Sta. Lucia</string>
    <string name="hint_request_search">Search for request by id...</string>
    <string name="inbound_text">Inbound</string>
    <string name="outbound_text">Outbound</string>
    <string name="all_requests_text">All</string>
    <string name="go_back_text">Go back</string>
    <string name="sample_product_name_batch_list">Sample Product Name - Batch List</string>
    <string name="sample_batch_id">BAT-###</string>
    <string name="sample_date_received">Date Received: 01/31/2026</string>
    <string name="edit_batch_text">Edit Batch</string>
    <string name="reason_for_edit_text">Reason for edit:</string>
    <string name="quantity_sample">10</string>
    <string name="stock_adjustment_text">Stock Adjustment:</string>
    <string name="hint_date">YYYY/MM/DD</string>
    <string name="edit_batch_colon_text">Edit Batch:</string>
    <string name="selected_perfume_text">Selected Perfume:</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="target_date_text">Target Date:</string>
    <string name="sample_date_submitted">Date Submitted: 2026/01/31</string>
    <string name="to_text">to</string>
    <string name="request_sample_to_branch">Riverbanks</string>
    <string name="drawer_sample_text">BRANCH: STA. LUCIA</string>
    <string name="logout_text">Logout</string>
    <string name="from_branch_text">From Branch</string>
    <string name="to_branch_text">To Branch</string>
    <string name="created_by_text">Created By</string>
    <string name="sample_name">Sample Name</string>
    <string name="open_message_text">Open Message</string>
    <string name="available_text">Available</string>
    <string name="requested_qty_text">Requested Qty</string>
    <string name="approve_request_question_text">Approve Request?</string>
    <string name="approved_quantity_colon_text">Approved Quantity:</string>
    <string name="enter_custom_approved_qty_here_hint">Enter custom approved qty here...</string>
    <string name="timeline_step_text">Timeline Step</string>
    <string name="timeline_subtitle_text">Timeline subtitle</string>
    <string name="requested_products_text">Requested Products</string>
    <string name="timeline_text">Timeline</string>
    <string name="approve_text">Approve</string>
    <string name="deny_text">Reject</string>
    <string name="received_question_mark_text">Received?</string>
    <string name="close_text">Close</string>
    <string name="no_message_text">No message</string>
    <string name="message_text">Message</string>
    <string name="received_quantity_text">Received Quantity</string>
    <string name="remarks_text">Remarks</string>
    <string name="additional_information_hint">Enter additional information here</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="back_to_login">Back to Login</string>
    <string name="send_reset_instructions">Send Reset Instructions</string>
</resources>