<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeliveryDetailsActivity">

    <include
        android:id="@+id/top_navigation_bar"
        layout="@layout/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/go_back_text"
        android:textColor="@color/text_secondary"
        app:icon="@drawable/icon_chevron_left"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_navigation_bar"
        app:srcCompat="@drawable/icon_chevron_left" />

    <TextView
        android:id="@+id/text_view_delivery_details_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample_delivery_id"
        android:textSize="@dimen/font_l"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go_back" />

    <TextView
        android:id="@+id/text_view_delivery_details_date_submitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_date_submitted"
        app:layout_constraintBottom_toBottomOf="@+id/button_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_go_back" />

    <TextView
        android:id="@+id/text_view_delivery_details_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/badge_design"
        android:backgroundTint="@color/yellow_secondary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="@dimen/font_l"
        android:text="@string/inbound_text"
        android:textColor="@color/darker_yellow_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_delivery_details_id"
        app:layout_constraintEnd_toEndOf="@+id/text_view_delivery_details_date_submitted"
        app:layout_constraintTop_toTopOf="@+id/text_view_delivery_details_id" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/from_branch_text"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/font_s"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/text_view_delivery_details_id"
        app:layout_constraintTop_toBottomOf="@+id/text_view_delivery_details_id"
        app:layout_setHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_branch_text"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/font_s"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/created_by_text"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/font_s"
        app:layout_constraintEnd_toEndOf="@+id/text_view_delivery_details_direction"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/text_view_deliver_details_from_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_sample_from_branch"
        android:textSize="@dimen/font_m"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/text_view_delivery_details_to_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_sample_to_branch"
        android:textSize="@dimen/font_m"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_deliver_details_from_branch"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/text_view_deliver_details_from_branch" />

    <TextView
        android:id="@+id/text_view_delivery_details_created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_name"
        android:textSize="@dimen/font_m"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_border"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_delivery_details_to_branch">
        <!-- Added Bottom Constraint to chain it to the timeline container -->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/requested_products_text"
            android:textSize="@dimen/font_l"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_delivery_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:listitem="@layout/card_delivery_items" />
        <!-- Changed height to 0dp and added bottom constraint to parent so it fills the box -->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reject_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/red"
            android:layout_margin="8dp"
            android:text="@string/deny_text"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/button_design"
            android:backgroundTint="@color/green"
            android:layout_margin="8dp"
            android:text="@string/approve_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>